--- a/AK-Site/src/styles/base.css
+++ b/AK-Site/src/styles/base.css
@@ -19,6 +19,11 @@ body {
   overflow-x: hidden;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 /* Container System */
 .container {
   max-width: 1200px;
